// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Song /> should have song--active class 1`] = `
<styled.li
  active={true}
  data-active={true}
  data-cy="song-1"
  key="1"
  onClick={[Function]}
>
  <styled.div>
    <styled.img
      alt=""
      src="https://img.youtube.com/vi/1/default.jpg"
    />
    <styled.div>
      1
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <styled.div>
        1
      </styled.div>
    </styled.div>
    <styled.div>
      1
    </styled.div>
  </styled.div>
</styled.li>
`;

exports[`<Song /> should render properly 1`] = `
.c0 {
  background: #eaeaea;
  margin: 5px 0 5px 10px;
  clear: both;
  list-style: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 79px;
}

.c1 {
  width: 40%;
  float: left;
  background: #ccc;
  position: relative;
  overflow: hidden;
}

.c2 {
  width: 100%;
  z-index: 1;
}

.c3 {
  background: rgba(0,0,0,.7);
  color: #fff;
  bottom: 3px;
  right: 3px;
  position: absolute;
  z-index: 2;
  font-size: .9em;
  padding: 3px 4px;
  border-radius: 4px;
  -webkit-font-smoothing: antialiased;
}

.c4 {
  padding: 0 5px;
}

.c5 {
  font-weight: bold;
  width: 100%;
  position: relative;
  margin-bottom: 10px;
}

.c7 {
  margin-bottom: 10px;
}

.c6 {
  font-size: 1.1em;
  margin: 0;
  width: 165px;
  line-height: 1.4em;
}

<Song
  author={1}
  handleClick={[Function]}
  id={1}
  index={1}
  item={1}
  prettyDuration={1}
  songId={1}
  title={1}
>
  <styled.li
    active={true}
    data-active={true}
    data-cy="song-1"
    key="1"
    onClick={[Function]}
  >
    <li
      className="c0"
      data-active={true}
      data-cy="song-1"
      onClick={[Function]}
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.img
            alt=""
            src="https://img.youtube.com/vi/1/default.jpg"
          >
            <img
              alt=""
              className="c2"
              src="https://img.youtube.com/vi/1/default.jpg"
            />
          </styled.img>
          <styled.div>
            <div
              className="c3"
            >
              1
            </div>
          </styled.div>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="c4"
        >
          <styled.div>
            <div
              className="c5"
            >
              <styled.div>
                <div
                  className="c6"
                >
                  1
                </div>
              </styled.div>
            </div>
          </styled.div>
          <styled.div>
            <div
              className="c7"
            >
              1
            </div>
          </styled.div>
        </div>
      </styled.div>
    </li>
  </styled.li>
</Song>
`;

exports[`<Song /> should test handleClick function 1`] = `
<styled.li
  active={false}
  data-active={false}
  data-cy="song-1"
  key="1"
  onClick={[Function]}
>
  <styled.div>
    <styled.img
      alt=""
      src="https://img.youtube.com/vi/1/default.jpg"
    />
    <styled.div>
      1
    </styled.div>
  </styled.div>
  <styled.div>
    <styled.div>
      <styled.div>
        1
      </styled.div>
    </styled.div>
    <styled.div>
      1
    </styled.div>
  </styled.div>
</styled.li>
`;
